--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,12 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+
+        unitTests.includeAndroidResources = true
+    }
 }
 
 dependencies {
@@ -42,6 +48,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -53,18 +60,13 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:$dagger_version"
     kapt "androidx.hilt:hilt-compiler:1.0.0-alpha02"
 
-    /*def hilt_version = "2.28-alpha"
-    implementation "com.google.dagger:hilt-android:$hilt_version"
-    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"*//**//*
-
-    def hilt_viewmodels = "1.0.0-alpha01"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_viewmodels"
-  //  kapt "androidx.hilt:hilt-compiler:$hilt_viewmodels"*/
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
     def retrofit_version = "2.9.0"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
 
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
     //Lifecycle
     def lifecycle_version = "2.2.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -88,5 +90,9 @@ dependencies {
     def coroutines_android_version = '1.3.9'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_android_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_android_version"
+
+    def gversion = '2.71828'
+    implementation "com.squareup.picasso:picasso:$gversion"
+
 
 }
