--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,9 +49,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.13.1'
+    /*testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'*/
+
 
     implementation "com.google.dagger:hilt-android:$dagger_version"
     implementation "com.google.dagger:dagger:2.29"
@@ -94,5 +95,29 @@ dependencies {
     def gversion = '2.71828'
     implementation "com.squareup.picasso:picasso:$gversion"
 
+
+    //---------------------------- TESTING ----------------------------//
+
+    // Local Unit Tests
+    implementation "androidx.test:core:1.2.0"
+    testImplementation "junit:junit:4.13"
+    testImplementation "org.hamcrest:hamcrest-all:1.3"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "org.robolectric:robolectric:4.3.1"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.1"
+    testImplementation "com.google.truth:truth:1.0.1"
+    testImplementation "org.mockito:mockito-core:2.21.0"
+
+    // Instrumented Unit Tests
+    androidTestImplementation "junit:junit:4.13"
+    androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.12.1"
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.1"
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation "com.google.truth:truth:1.0.1"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation "org.mockito:mockito-core:2.21.0"
+
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.4'
 
 }
